# pyO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  bash_pyo  pyproject.toml
.github/workflows/: ci.yml
docs/api/: README.md
docs/architecture/: overview.md
examples/: auto_demo.py  test_1.py
pyo/: __init__.py  cli.py
pyo/_misc/: .$logo.drawio.bkp  logo.drawio
pyo/_misc/notes/lemastertech/: README.md
pyo/core/: _PyoApp.py  __init__.py  _autoplaytools.py  _keyboard.py  _pyoapp.py  piano.py
pyo/ui/: __init__.py  _graphics.py  _midi.py  _pyoapp.py  interface.py
tests/integration/: README.md  test_1.py
tests/unit/: test_cli copy.py  test_cli.py
tests/unit/core/: test_keyboard.py
tests/unit/ui/: test_interface.py
